--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,6 +473,13 @@ button,
     border-bottom: 3px solid var(--border-black);
 }
 
+.profile-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
 .profile-badge {
     background: var(--bg-green);
     border-top: 3px solid var(--border-black);
